# md-tts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sample.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: v0.5.0-design-decisions.md
src/md_tts/: __init__.py  __main__.py  _edge_reader.py  _kbd.py  _local_reader.py  cli.py  exporter.py  parser.py  reader.py
tests/: test_cli.py  test_edge_reader.py  test_exporter.py  test_lang_detect.py  test_parser.py
tests/fixtures/: sample.md
